--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,516 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins',sans-serif;
+    
+}
+html{
+    scroll-behavior: smooth;
+}
+.x1:hover{
+    -webkit-text-stroke: 3px #00fdff;
+    color:transparent;
+}
+
+.red{
+    color: #ec1c5e;
+}
+
+/* background video  start*/
+.back-video{
+
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+@media (min-aspect-ratio:16/9){
+    .back-video{
+        width:100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ratio:16/9){
+    .back-video{
+        width:auto;
+        height: 100%;
+    }
+}
+
+/*...end....*/
+
+
+.container{
+    padding: 10px 10%;
+}
+
+
+.container-1{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(12,3,51,0.3),rgba(12,3,51,0.3));
+    position: relative;
+    padding: 0.5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.navbar{
+    width: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    padding: 20px 8%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo{
+    width: 120px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color:#fff;
+}
+.logo:hover{
+    -webkit-text-stroke: 1px #adfc03;
+    color:transparent;
+}
+
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin-left: 40px;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color:#fff;
+    font-size: 17px;
+    position: relative;
+}
+.navbar ul li a::after{
+content: '';
+width:0;
+height: 3px;
+background:linear-gradient(245deg, blue , #adfc03 90%);
+position: absolute;
+left:0;
+bottom:-6px;
+transition: 0.5s;
+
+}
+.navbar ul li a:hover::after{
+    width: 100%;
+}
+
+
+.content{
+    text-align:left;
+}
+.head{
+    color: aliceblue;
+    font-size:60px;
+}
+
+
+.head span{
+    font-size:60px;
+    color: #adfc03;
+    font-weight: 300;
+    transition: 0.5s;
+    margin-bottom: 6px;
+}
+.sentence{
+    color:whitesmoke;
+    font-size: 26px;
+    margin-bottom: 6px;
+}
+.hbtn{
+    text-align: center;
+}
+
+
+.head span:hover{
+    -webkit-text-stroke: 4px #00fdff;
+    color:transparent;
+}
+
+.content div a{
+    text-decoration: none;
+    display:inline-block;
+    color: #fff;
+    font-size: 24px;
+    border: 2px solid #a5cdf7;
+    padding: 14px 70px;
+    border-radius: 50px;
+    margin-top: 20px;
+    margin-left: 20px;
+    
+      
+}
+/*home page end */
+
+/*about page start */
+
+#about{
+    padding: 80px 0;
+    color: whitesmoke;
+    background: linear-gradient(145deg, black 50% , darkcyan  );
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1{
+    flex-basis: 35%;
+   
+}
+
+.frame{
+padding: 5px 5px 5px 0px;
+background:linear-gradient(90deg, black 90% , #ec1c5e  );
+border-radius: 15px;
+} 
+
+
+.about-col-1 img{
+    width: 100%;
+    
+
+}
+.about-col-2{
+    flex-basis: 60%;
+     
+
+}
+
+.sentence-2{
+    color:whitesmoke;
+    font-size: 20px;
+    margin-bottom: 3px;
+}
+
+
+.sub-title{
+     font-size: 60px;
+     font-weight: 600;
+     color:whitesmoke;
+}
+
+.tab-titles{
+ display:flex;
+ margin: 20px 0 40px;
+
+}
+
+.tab-links{
+ margin-right: 50px;
+ font-size: 18px;
+ font-weight: 500;
+ cursor: pointer;
+ position: relative;
+
+}
+.tab-links::after{
+    
+content: '';
+width: 0;
+height: 3px;
+background-color:cyan; 
+position: absolute;
+left: 0;
+bottom: -8px;
+transition:0.5s ;
+
+}
+
+.tab-links.active-link::after{
+width: 50%;
+
+
+}
+.tab-contents ul li{
+
+    list-style: none;
+    margin: 10px 0; 
+}
+.tab-contents ul li span{
+  color:#ec1c5e;
+  font-size: 14px;
+
+}
+
+.tab-contents{
+    display: none;
+
+}
+.tab-contents.active-tab{
+    display: block;
+}
+
+/*about page end */
+
+/* portfolio page start*/
+#portfolio{
+    padding: 50px 0 ;
+    background: linear-gradient(45deg, black  41%  , darkcyan );
+
+}
+
+.work-list{
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(230px , 1fr));
+    grid-gap:40px;
+    margin-top: 50px;
+
+
+}
+
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+
+}
+.work img{
+    height: 100%;
+    width:100%;
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+}
+
+.layer{
+     width:100%;
+     height: 0;
+     background: linear-gradient(45deg, black  41%  , darkcyan );
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 14px;
+    transition: height 0.5s;
+}
+
+.layer h3{
+    font-weight: 500;
+    margin-bottom:20px;
+}
+
+.layer a{
+    margin-top: 20px;
+    color:#ff004f;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: black;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+
+}
+.work:hover img{
+    transform:scale(1.1) ;
+}
+.work:hover .layer{
+    height: 100%;
+}
+
+.btn{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #ff004f;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    transition: background 0.5s;
+}
+.btn:hover{
+    background: linear-gradient(45deg, black  60%  , darkcyan );
+    color:#ff004f;
+}
+ 
+/* portfolio page end */
+
+/* Contact page start */
+#contact{
+   
+    background: linear-gradient(145deg,  black 38%  , darkcyan );
+}
+
+.contact-left{
+
+    flex-basis: 35%;
+}
+
+.contact-left p{
+    color:#eaecf2
+}
+
+
+.contact-left p i{
+ color: #ff004f;
+ margin-right: 15px;
+ margin-top: 15px;
+  font-size: 25px;
+
+}
+.social-icons{
+     margin-top: 30px;
+}
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color:#ababab;
+    display: inline-block;
+    transition: transfrom 0.5s;
+}
+.social-icons a:hover{
+    color:#ff004f ;
+    transform:translateY(-5px);
+
+}
+.btn.btn2{
+    display: inline-block;
+    background-color:transparent;
+}
+
+.contact-right{
+    flex-basis: 60%;
+}
+.contact-right form{
+    width:100%;
+
+}
+
+
+.Name,.email{
+    width:100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius:6px ;
+    border: 1px solid #ff004f;
+
+}
+
+form textarea{
+    width:100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius:6px ;
+     border: 1px solid #ff004f;
+
+}
+form .btn2{
+    padding: 14px 16px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+
+}
+
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    font-weight: 300;
+    margin-top: 20px;
+    color:whitesmoke;
+
+}
+
+
+nav .material-symbols-outlined{
+    display:none;
+}
+.material-symbols-outlined{
+    color: #eaecf2;
+}
+
+
+/*-----------small screen and button---------*/
+@media only screen and (max-width:600px){
+    
+    nav .material-symbols-outlined{
+        display: block;
+        font-size: 25px;
+    }
+    nav ul{
+        background: #ff004f;
+        position: fixed;
+        top:0;
+        right:-200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+
+    nav ul .material-symbols-outlined{
+        
+        position: absolute;
+        top:25px;
+        left:25px;
+        cursor: pointer;
+    }
+    .sub-title{
+        font-size: 40px;
+    }
+    .about-col-1,.about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+    .about-col-2{
+      font-size: 14px;  
+    }
+
+    .tab-links{
+        font-size: 16px;
+        margin-right:20px ;
+
+    }
+
+    .contact-left,.contact-right{
+        flex-basis: 100%;
+    }
+    .copyright{
+        font-size: 14px;
+
+    }
+}
+
+
+
+
 
